Ensure that tooltip text doesn't wrap

--- a/src/styles/components/_tooltip.scss
+++ b/src/styles/components/_tooltip.scss
@@ -8,6 +8,11 @@
 
 .tooltip__label {
   font-weight: $weight-semibold;
+  white-space: nowrap;
+}
+
+.tooltip__item {
+  white-space: nowrap;
 }
 
 .tooltip__footnote-container {
